- Bugfix: Missing translation in SoftwareUpdateDialog. (Closes issue #180) (TNX foldynl)
- Bugfix: Inconsistency text in Tip#2. (Closes issue #182) (TNX foldynl)
- Bugfix: Missing Translation string in SetupPageMisc::createUI. (Closes issue #185) (TNX foldynl)
- Bugfix: When LoTW service was no enabled, KLog insisted to show the QSOs to be exported.
- Added the tooltip 21 about uploading LoTW.
- Translation: Czech (TNX OK1MLG)

May 2021 - 1.5.2
- Bugfix: Complex calls like K/EA4K/P were identified as wrong calls. (Closes issue #177) (TNX PA3FNT)

April 2021 - 1.5.1
- Added the GitHub repository to find new releases due to the issue with savannah.nongnu.org
- New feature: F4 toggles the real time status (on/off).
- Improvements on call identification  management on user input.
- Bugfix: Editing removes QTH and name (Closes issue #113)
- Bugfix: Some complex calls (i.e. F/EA4K) were causing a crash unders some conditions.
- Bugfix: DX Entity of some complex calls where not properly identified. (Closes issue #8).

March 2021 - 1.5
- Added the 8M & 5M bands.
- New feature: Added "Adif file deletion" checkbox. User can choose to show or not the message boxes after uploading QSOs.
- New feature: New function added to fill automatically the satMode field in satellites Tab depending on upload/download frequencies.
- UI: Added EA5WA as Author. :-)
- New feature: LoTW confirmation is also counted for DXCC & WAZ.
- New feature: DUPES are now identified when coming from WSJTX, ADIF logs, LoTW logs or simply adding a QSO.
- New feature: Added a time period to consider a QSO as DUPE if call, band & mode are also the same. (Closes issue #41)
- Improvement: Hamlib now supports network communication (TNX DG1VS)
- Improvement: Optimized the way DXCC & WAZ are managed.
- Improvement: KLog receives the clear messages from WSJTX and is able to clear the KLog UI.
- Statistics: Added the Grids on Satellites statistics.
- Statistics: Added the DXCC on Satellites statistics.